New version for JHU DS Coursera Project

--- a/ml.Rmd
+++ b/ml.Rmd
@@ -73,50 +73,70 @@ The outcome being a multi-level factor variable, we can use boosting, decision t
 
 ```{r 3_model, echo=TRUE, eval = FALSE}
 ## Model fit and predictions
-model.rf1 <- randomForest(classe ~ ., data = training)
-model.rf2 <- randomForest(classe ~ ., data = training, cv.fold = 10)
+set.seed(456)
+modfit.rf <- randomForest(classe ~ ., data = training)
+
+set.seed(456)
+modfit.rfcv10 <- randomForest(classe ~ ., data = training, cv.fold = 10)
+
+set.seed(456)
 modfit.gbm <- train(classe~.,data=training, method="gbm", verbose = FALSE)
 
-val.rf1.pred <- predict(model.rf1, newdata = val)
-val.rf2.pred <- predict(model.rf2, newdata = val)
+set.seed(456)
+modfit.gbmcv10 <- train(classe~.,data=training, method="gbm", trControl = trainControl(method = "cv", number = 10), verbose = FALSE)
+
+# Validation with the 20% held out validation set
+val.rf.pred <- predict(modfit.rf, newdata = val)
+val.rfcv10.pred <- predict(modfit.rfcv10, newdata = val)
 val.gbm.pred <- predict(modfit.gbm, newdata = val)
+val.gbmcv10.pred <- predict(modfit.gbmcv10, newdata = val)
 
 # Create the Confusion Matrices and obtain accuracies: 
-cfm.rf1 <- confusionMatrix(val.rf1.pred, val$classe)
-cfm.rf2 <- confusionMatrix(val.rf2.pred, val$classe)
+cfm.rf <- confusionMatrix(val.rf.pred, val$classe)
+cfm.rfcv10 <- confusionMatrix(val.rfcv10.pred, val$classe)
 cfm.gbm <- confusionMatrix(val.gbm.pred, val$classe)
+cfm.gbmcv10 <- confusionMatrix(val.gbmcv10.pred, val$classe)
 
 print(paste(
-  round(cfm.rf1$overall[1],4), 
-  round(cfm.rf2$overall[1],4),
-  round(cfm.gbm$overall[1],4)
+  round(cfm.rf$overall[1],4), 
+  round(cfm.rfcv10$overall[1],4),
+  round(cfm.gbm$overall[1],4),
+  round(cfm.gbmcv10$overall[1],4)
 ))
 ```
 ##Conclusion
-The accuracies for the 3 methods are 0.9982, 0.9982 and 0.989 respectively.
-The random forest models provide identical results, and are more accurate over gbm on the validation dataset. We choose model.rf1 for further prediction on the give test data set.  
+The accuracies for the 4 methods are 0.9985, 0.9985 and 0.9885, 0.9895 respectively.
+
+The out of sample (OOB) errors for both Random Forest models are 0.25%.  
+
+
+The random forest models provide identical results, and are more accurate over gbm on the validation dataset. However, we observe a 10-fold cross-validation slightly improves the accuracy for GBM. We choose modfit.rf for further prediction on the give test data set.  
 
 ## Appendix
 ```{r 5a_testdata, echo=TRUE, eval = FALSE}
 ## Model Details
-model.rf1
-#Output
-#No. of variables tried at each split: 7
+modfit.rf
 
-#        OOB estimate of  error rate: 0.24%
+# Call:
+#  randomForest(formula = classe ~ ., data = training) 
+#               Type of random forest: classification
+#                     Number of trees: 500
+# No. of variables tried at each split: 7
+#
+#        OOB estimate of  error rate: 0.25%
 #Confusion matrix:
 #     A    B    C    D    E  class.error
-#A 4463    1    0    0    0 0.0002240143
-#B    3 3034    1    0    0 0.0013166557
+#A 4463    0    0    0    1 0.0002240143
+#B    5 3032    1    0    0 0.0019749835
 #C    0   13 2724    1    0 0.0051132213
 #D    0    0   14 2558    1 0.0058297707
-#E    0    0    0    4 2882 0.0013860014
+#E    0    0    0    3 2883 0.0010395010
+
 
 ##Evaluate Test Results
-test.rf1.pred <- predict(model.rf1, newdata = pml.tst)
+test.rf.pred <- predict(modfit.rf, newdata = pml.tst)
 
-#The above statement provide following outcomes for the test dataset:  
-# 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20   
+#The above statement provide following outcomes for the test dataset:
+# 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 
 # B  A  B  A  A  E  D  B  A  A  B  C  B  A  E  E  A  B  B  B 
 ```
-
